mdapipkg/unpackaged/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Postal_Code__c</fullName>
        <label>Home Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic Info</fullName>
                </value>
                <value>
                    <fullName>Application Details</fullName>
                </value>
                <value>
                    <fullName>Identification</fullName>
                </value>
                <value>
                    <fullName>Banking Details</fullName>
                </value>
                <value>
                    <fullName>Conditions</fullName>
                </value>
                <value>
                    <fullName>App Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Applications</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Applications</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>